apps/api/musicbook-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicbook-be
  namespace: api
  labels:
    app: musicbook-be
spec:
  replicas: 0
  selector:
    matchLabels:
      app: musicbook-be
  template:
    metadata:
      labels:
        app: musicbook-be
    spec:
      containers:
      - name: musicbook-be
        image: hyeonwoo5342/musicbook-be:8
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '200Mi'
            cpu: '80m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: musicbook-be
#   namespace: api
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: musicbook-be
#   minReplicas: 2
#   maxReplicas: 10
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 70
