apps/api/musicbook-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicbook-be
  namespace: api
  labels:
    app: musicbook-be
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: musicbook-be
